--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fpapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fortheblind.github.io/finalProject",
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -11,6 +12,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
