--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "homepage": "https://fortheblind.github.io/finalProject",
   "dependencies": {
+    "moment": "^2.18.1",
+    "rc-calendar": "^9.1.8",
+    "rc-select": "^6.9.3",
     "react": "^16.0.0",
+    "react-big-calendar": "^0.16.1",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14"
