trying to work out routing with Auth0, added 'finalProject' to all routes so that callback url would match git repo name when redirecting.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://fortheblind.github.io/finalProject",
   "dependencies": {
+    "auth0-js": "^8.10.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.18.1",
     "rc-calendar": "^9.1.8",
     "rc-select": "^6.9.3",
