--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://fortheblind.github.io/finalProject",
   "dependencies": {
     "auth0-js": "^8.10.1",
+    "axios": "^0.16.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.18.1",
     "rc-calendar": "^9.1.8",
