--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.0.0",
     "react-big-calendar": "^0.16.1",
     "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14"
   },
